NetBSD Problem Report #15924

Received: (qmail 19709 invoked from network); 15 Mar 2002 06:08:05 -0000
Message-Id: <200203150607.TAA18515@ub1.grace.cri.nz>
Date: Fri, 15 Mar 2002 19:07:53 +1300
From: Gregory McGarry <g.mcgarry@ieee.org>
To: gnats-bugs@gnats.netbsd.org
Subject: MAXIMUM LOAD SIZE EXCEEDED (7688 > 7680)
X-Send-Pr-Version: 3.95

>Number:         15924
>Category:       port-pmax
>Synopsis:       bootxx_ffs too big
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    port-pmax-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Mar 15 06:09:01 +0000 2002
>Closed-Date:    Tue May 21 11:56:24 +0000 2002
>Last-Modified:  Tue May 21 11:56:24 +0000 2002
>Originator:     Gregory McGarry
>Release:        NetBSD-current
>Organization:
>Environment:

Host:	NetBSD/i386 1.5
Target:	NetBSD/pmax current

>Description:

libsa just got too big for the pmax boot blocks.  Building the
bootblocks fails:

text    data    bss     dec     hex     filename
7304    384     508     8196    2004    bootxx_ffs
checking sizes for bootxx_ffs... MAXIMUM LOAD SIZE EXCEEDED (7688 > 7680)
*** Error code 1


>How-To-Repeat:

Compile the bootxx_ffs bootblocks.

>Fix:

N/A

>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->feedback 
State-Changed-By: simonb 
State-Changed-When: Fri Mar 15 05:23:52 PST 2002 
State-Changed-Why:  
This should be fixed with the libsa changes that introduce files.c. 
I've only been able to cross-compile check that the bootblocks now fit 
within the size limit and haven't been able to test that the resultant 
bootblocks actually work. 
Can you check that this does indeed fix the problem? 
State-Changed-From-To: feedback->closed 
State-Changed-By: lukem 
State-Changed-When: Tue May 21 04:53:50 PDT 2002 
State-Changed-Why:  
the automatic cross-build machine successfully built 
pmax recently, so this isn't an issue anymore 
>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.