Move files[] from globals.c to its own file.  Including all of globals.o breaks the size limit for at least the pmax bootblocks.

Fixes PR port-pmax/15924 from Gregory McGarry.